tests/fixtures/invalid/min_bool_none.py
# Cannot call min() with Bool, None
x = min(True, None)
